@@ -1,21 +1,0 @@
-test:
-  adapter: sqlite3
-  database: ':memory:'
-
-development:
-  adapter: em_mysql2
-  database: mycel
-  username: user
-  password: password
-  host: localhost
-  pool: 5
-  reconnect: true
-
-production:
-  adapter: em_mysql2
-  database: mycel
-  username: user
-  password: password
-  host: localhost
-  pool: 5
-  reconnect: true
