@@ -1,12 +1,0 @@
-api:
-  host: localhost
-  port: 9000
-ws:
-  host: localhost
-  port: 9001
-sip2:
-  host: sip2server.com
-  port: 6666
-auth:
-  username: admin
-  password: secret
