@@ -1,3 +1,4 @@
+	Bundle all settings into config/settings.rb
 	Client: bundle logo image data in executable
 	Assure minutes left in client status window never exceeds available time until closing
 	Client shuts down automatically according to department's closing hours
